[gd_scene load_steps=4 format=2]

[ext_resource path="res://Code/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ControlPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/EndScreen.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="ControlPanel" parent="." instance=ExtResource( 2 )]

[node name="EndScreen" parent="." instance=ExtResource( 3 )]

[connection signal="lose" from="ControlPanel" to="." method="LoseGame"]
[connection signal="win" from="ControlPanel" to="." method="WinGame"]
